--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,44 @@
-version: '3.8'
-
 services:
-  postgres:
+  postgres1:
     image: postgres:15
-    container_name: postgres-auth
+    container_name: postgres1
     restart: unless-stopped
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: strongpassword123
       POSTGRES_DB: mydatabase
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata1:/var/lib/postgresql/data
+
+  postgres2:
+    image: postgres:15
+    container_name: postgres2
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: strongpassword123
+      POSTGRES_DB: mydatabase
+    ports:
+      - "5434:5432"
+    volumes:
+      - pgdata2:/var/lib/postgresql/data
+      
+  postgres3:
+    image: postgres:15
+    container_name: postgres3
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: strongpassword123
+      POSTGRES_DB: mydatabase
+    ports:
+      - "5435:5432"
+    volumes:
+      - pgdata3:/var/lib/postgresql/data
 
 volumes:
-  pgdata:
+  pgdata1:
+  pgdata2:
+  pgdata3:
